2008-08-20  vadim  <vadim@vk.crocodile.org>

	* ObjectTreeView.cpp (ObjectTreeView::ObjectTreeView): Fixed GUI
	crash on Ubuntu Hardy that happened b/c of a bug in QT
	4.3.4. Crash happened when user added second object to any branch
	of the tree. When second object was added to the tree, the program
	terminated with assertion "ASSERT: "left.level > right.level" in
	file itemviews/qtreeview.cpp". This did not happen with QT 4.4.1
	and 4.3.2 (could not test with 4.3.5). The fix was to disable
	sorting in the QTreeView widget used to represent object tree.

2008-08-19  Vadim Kurland  <vadim@vk.crocodile.org>

	* NATCompiler_PrintRule.cpp (PrintRule::_printSrcService): fixed
	bug (no #): policy compielr for iptables used multiport module
	option "--destination-port" instead of "--dports" when version was
	set to 1.4.0. Option "--destination-port" is only for very old
	versions of iptables (<1.2.6). This change makes compiler properly
	compare version numbers rather than compare them as strings.

	* RuleSetView.cpp (RuleSetView::pasteRuleAbove): Permit copy/paste
	of individual rules between two data files. When a rule is copied
	this way, all objects used in this rule are copied as well.

	* FWWindow.cpp (FWWindow::recreateWindowsMenu): fixed typo in the
	main menu item name

2008-08-18  Vadim Kurland  <vadim@vk.crocodile.org>

	* Compiler.cpp (Compiler::complexMatch): (change in libfwbuilder)
	fixed bug (no #): policy compiler for iptables used chain OUTPUT
	instead of FORWARD if NetworkIPv6 was used in "source".

2008-08-17  Vadim Kurland  <vadim@vk.crocodile.org>

	* ipt.cpp (main): fixed bug #2054755: "Duplicate Chain". Compiler
	for iptables used to generate duplicate "iptables -N chain"
	commands for the same chain in some cases.

	* Preprocessor_pf.cpp (Preprocessor_pf::convertObject): fixed bug
	#2056510 "Compile time" address tables objects dont
	work. Preprocessor in compiler for PF for some reason used to